# WSI-toolbox

./: .gitignore  CLAUDE.md  README.md  README_API.md  pyproject.toml
.github/workflows/: lint.yml
docs/: 05_export.md
scripts/: benchmark_engine.py
viewer/: server.py  template.html
wsi_toolbox/: __init__.py  app.py  cli.py  commands.py  common.py  models.py  processor.py  watcher.py  wsi_files.py
wsi_toolbox/commands/: __init__.py  clustering.py  data_loader.py  dzi.py  dzi_export.py  feature_extraction.py  patch_embedding.py  pca.py  preview.py  show.py  tile_embedding.py  umap_embedding.py  wsi.py
wsi_toolbox/utils/: __init__.py  analysis.py  cli.py  hdf5_paths.py  plot.py  progress.py  seed.py  st.py  white.py
