[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WSI-toolbox"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
root = "."
package-dir = {"" = "."}

dependencies = [
    "einops>=0.8.1",
    "fairscale>=0.4.13",
    "gigapath",
    "h5py>=3.13.0",
    "hdbscan>=0.8.40",
    "imagecodecs>=2024.12.30",
    "joblib>=1.4.2",
    "leidenalg>=0.10.2",
    "matplotlib>=3.9.4",
    "networkx>=3.3",
    "numpy<2",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "openslide-python>=1.4.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pydantic>=2.10.6",
    "pydantic-autocli>=0.1.4",
    "pyqt6>=6.8.1",
    "python-igraph>=0.11.8",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
    "streamlit-antd-components>=0.3.2",
    "streamlit-aggrid>=0.3.4.post3",
    "taskipy>=1.14.1",
    "tifffile>=2025.2.18",
    "timm==0.9.16",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "umap-learn>=0.5.7",
    "zarr>=3",
]

[tool.uv.sources]
gigapath = { git = "https://github.com/prov-gigapath/prov-gigapath.git", rev = "5d77be0"}
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[project.optional-dependencies]
build = ["torch", "packaging", "wheel", "setuptools"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4"
requires-dist = ["torch", "einops"]


[tool.taskipy.tasks]
cli = "python -m wsi_toolbox.cli"
app = "streamlit run wsi_toolbox/app.py --server.address 0.0.0.0 --server.port ${PORT:-8501}"
watcher = "python -m wsi_toolbox.watcher"

[tool.hatch.build.targets.wheel]
packages = ["wsi_toolbox"]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "jupyterlab>=4.1.6",
]
